Added default window handling.

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
 		<meta name="viewport" content="initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="style.css" />
 		<script type="text/javascript" src="JsAnimScroll.js"></script>
+		
 	</head>
 
-	<body>
-	    <button onclick="jsAnimScroll.scroll(1000,3000,document.getElementById('scrollThis'));">onclick="jsAnimScroll.scroll(1000,3000,document.getElementById('scrollThis'));"</button>
-	    <div id="scrollThis">
+	<body id="scrollThis">
+	    <button onclick="jsAnimScroll.scroll(1000,3000);">onclick="jsAnimScroll.scroll(1000,3000,document.getElementById('scrollThis'));"</button>
+<!--	    <div id="scrollThis">-->
 	        <div class="color t1"></div>
 	        <div class="color t2"></div>
 	        <div class="color t3"></div>
@@ -27,7 +28,9 @@
 	        <div class="color t1"></div>
 	        <div class="color t2"></div>
 	        <div class="color t3"></div>
-	    </div>
-
+<!--	    </div>-->
+<script>
+//            jsAnimScroll.setScrollObjectById('scrollThis');
+        </script>
 	</body>
 </html>
