Add linear timing function.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta name="viewport" content="initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css" />
     <script type="text/javascript" src="JsAnimScroll.js"></script>
-    <script type="text/javascript" src="JsAnimScrollv2.js"></script>
 
 </head>
 
@@ -33,7 +32,7 @@
     <!--	    </div>-->
     <script>
         function ASD() {
-            jsAnimScrollv2.easeInOutQuad(window, 1750, 3000);
+            jsAnimScroll.linear(window, 1750, 3000);
         }
     </script>
 </body>
